# sentimentanalysis_tf

./: .gitignore  README.md  app.py  pyproject.toml  research.ipynb
objects/: LogisticRegressionModel.pkl  encoder.pkl  vectorizer.pkl
src/sentimentanalysis_tf/: Kaggle.py  classifier.py  exception.py  logger.py  utils.py
templates/: index.html
