[project]
name = "SentimentAnalysis_TF"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["tensorflow>=2.18.0", "ipykernel>=6.29.5", "kaggle>=1.6.17", "opendatasets>=0.1.22", "click>=8.1.8", "matplotlib>=3.10.0", "seaborn>=0.13.2", "nltk>=3.9.1", "wordcloud>=1.9.4", "scikit-learn>=1.6.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.build]
package-dir="src/sentimentanalysis_tf"

[tool.pdm]
distribution = false
