[project]
name = "sentimentanalysis_tf"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "ipykernel>=6.29.5",
    "scikit-learn>=1.6.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
    "nltk>=3.9.1",
    "keras>=3.7.0",
    "tensorflow>=2.18.0",
    "flask>=3.1.0",
    "kaggle>=1.6.17",
    "opendatasets>=0.1.22",
    "pip>=24.3.1",
    "python-dotenv>=1.0.1"

]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.build]
package-dir="src/sentimentanalysis_tf"

[tool.pdm]
distribution = true


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
